保留温度数据为0-23的界面 陈习武

--- a/pad/app/src/main/res/values/strings.xml
+++ b/pad/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">pad</string>
+  <string name="app_name">33联动医疗融合</string>
   <string name="search">请输入要搜索的小鱼号、手机号或者姓名</string>
   <string name="menu_call">呼叫</string>
   <string name="menu_change">修改</string>
